packages/telemetry-gateway/test_output_stderr.log
(node:16260) Warning: Failed to load the ES module: C:\Users\Projects\aicore\packages\telemetry-gateway\jest.config.cjs. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
C:\Users\Projects\aicore\packages\telemetry-gateway\jest.config.cjs:1
export default {
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at Module._compile (node:internal/modules/cjs/loader:1786:20)
    at Object..js (node:internal/modules/cjs/loader:1943:10)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.require (node:internal/modules/cjs/loader:1556:12)
    at require (node:internal/modules/helpers:152:16)
    at requireOrImportModule (C:\Users\Projects\aicore\node_modules\.pnpm\jest-util@29.7.0\node_modules\jest-util\build\requireOrImportModule.js:44:28)
    at readConfigFileAndSetRootDir (C:\Users\Projects\aicore\node_modules\.pnpm\jest-config@29.7.0_@types+node@25.5.0\node_modules\jest-config\build\readConfigFileAndSetRootDir.js:112:66)
